# wsdl2file

./: .gitignore  README.md  pyproject.toml  setup.py
wsdl2file/: clark.py  cmd.py  command.py  const.py  zeep.py
