[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wsdl2file"
version = "0.1"
authors = [
  { "name"="Tyler MacDonald", email="tyler@macdonald.name" }
]
description = "Reduce a Web Services Definition (WSDL) down to a single file"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/proofserve/wsdl2file"
Issues = "https://github.com/proofserve/wsdl2file/issues"
